=========================================================================
CHANGE LOG
=========================================================================

Changes up to 0.99

    beta30

    * FreeType2 integration -- scalable fonts


    beta28

    * double-click on internal gui tab to hide it

    * fixed annoying problem with pop-up menus that fold back on self

    beta27

    * finished adding nucleic acid representations

    beta26

    * reworked some of the rendering code to work around OpenGL bugs

    beta24

    * proof of concept: molecular "Maya"

    * restored ability to move slice objects using shift actions

    beta23

    * fixed newly introduced scene bugs from beta22

    * binary GRD file fixes

    beta22

    * bump check

    * fixed busted GLU and GLN rotamers in library

    * dragging wizard, drag molecule (DrgM) mouse action

    * drag command & reconfigured editing mode mouse controls

    * reversed camera zoom behavior, added legacy_mouse_zoom setting

    * fixed longstanding scene/movie synchronization bug 

    beta21

    * worked around depth_cue/fog bug in recent ATI drivers.

    * added ability to "import pymol" and finish_launching from a method

    * added general XYZ file support (not just Tinker XYZ)

    beta20

    * -j startup option for use with "geowalls", geowall stereo support

    * "Opaque" option in background menu

    * checker background patter for alpha channel: show_alpha_checker

    beta19

    * fixed alpha channel handling for edges -- now combining correctly

    * opaque_background setting for OpenGL rendering

    beta17 & beta18

    * "import pymol" finally works -- worked around _tkinter gotcha!
    
    beta16

    * dpi option to png command and image_dots_per_inch setting

    * reading and saving of stereo images

    * now renders stereo pairs in both side-by-side and QB stereo modes

    * fixed valence assignment for HIS and other polymeric residues
      with various names
